<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/background"
tools:context=".UserActivity">

<androidx.appcompat.widget.AppCompatTextView
    android:id="@+id/user_info"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    style="@style/Text.Primary"
    android:text="@string/account_info"
    android:layout_marginTop="200dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<androidx.appcompat.widget.AppCompatTextView
    android:id="@+id/user_login"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    style="@style/Text.Primary"
    android:text="@string/user_text_login"
    android:layout_marginTop="10dp"
    android:layout_marginStart="100dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/user_info"/>

<androidx.appcompat.widget.AppCompatTextView
    android:id="@+id/user_password"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    style="@style/Text.Primary"
    android:text="@string/user_text_password"
    android:layout_marginTop="10dp"
    android:layout_marginStart="100dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/user_login"/>

<androidx.appcompat.widget.AppCompatTextView
    android:id="@+id/check_box1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    style="@style/Text.Primary"
    android:text="@string/notifications"
    android:layout_marginTop="10dp"
    android:layout_marginStart="100dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/user_password" />

<androidx.appcompat.widget.AppCompatTextView
    android:id="@+id/check_box2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    style="@style/Text.Primary"
    android:text="@string/cookies"
    android:layout_marginTop="10dp"
    android:layout_marginStart="100dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/check_box1" />

<androidx.appcompat.widget.AppCompatTextView
    android:id="@+id/preference"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    style="@style/Text.Primary"
    tools:text="@string/preference"
    android:layout_marginTop="10dp"
    android:layout_marginStart="100dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/check_box2" />

<androidx.appcompat.widget.AppCompatTextView
    android:id="@+id/current_login"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    style="@style/Text.Primary"
    tools:text=""
    android:layout_marginTop="10dp"
    android:layout_marginStart="200dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/user_info" />

<androidx.appcompat.widget.AppCompatTextView
    android:id="@+id/current_password"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    style="@style/Text.Primary"
    tools:text=""
    android:layout_marginTop="10dp"
    android:layout_marginStart="200dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/current_login" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/notification"
        style="@style/Text.Primary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="200dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/current_password"
        tools:text="yes" />

<androidx.appcompat.widget.AppCompatTextView
    android:id="@+id/cookies"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    style="@style/Text.Primary"
    android:layout_marginTop="10dp"
    android:layout_marginStart="200dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/notification"
    tools:text="yes"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/sex"
        style="@style/Text.Primary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@+id/preference"
        app:layout_constraintTop_toBottomOf="@+id/preference"
        tools:text="Third option" />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/drugs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Text.Primary"
        android:visibility="gone"
        tools:text="Third option"
        app:layout_constraintTop_toBottomOf="@+id/sex" />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/rock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Text.Primary"
        android:visibility="gone"
        tools:text="Third option"
        app:layout_constraintTop_toBottomOf="@+id/drugs" />
</androidx.constraintlayout.widget.ConstraintLayout>